--- a/common-api/dev-api/pom.xml
+++ b/common-api/dev-api/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>dev-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.stupid</groupId>
+            <artifactId>core-api</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
