--- a/common-toolkit/pom.xml
+++ b/common-toolkit/pom.xml
@@ -15,6 +15,7 @@
         <module>common-redis</module>
         <module>common-log</module>
         <module>common-core</module>
+        <module>common-mq</module>
     </modules>
 
     <dependencies>
